--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <meta name="description" content="">
         <meta name="author" content="">
 
-        <link rel="icon" type="image/x-icon" href="img/aiflowers-179931/aiflowers-24-179931.png">
+        <link rel="icon" type="image/x-icon" href="img/favicon/favicon.png">
 
         <title>Ashley Hauck | Developer</title>
 
@@ -25,7 +25,7 @@
         <link href="vendor/magnific-popup/magnific-popup.css" rel="stylesheet">
 
         <!-- Theme CSS -->
-        <link href="css/creative.min.css" rel="stylesheet">
+        <link href="css/main.min.css" rel="stylesheet">
 
         <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
         <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -222,7 +222,7 @@
 
 
         <!-- Theme JavaScript -->
-        <script src="js/creative.min.js"></script>
+        <script src="js/main.min.js"></script>
         <script src="js/app.js"></script>
 
     </body>
